--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
+
     <div class="projectReport">
+
         <div class="reportTOC">
             <div class="TOCLinkDiv">
                 <a href="#intro" class="mainTOC proxBold active">
@@ -65,21 +67,33 @@
                 <a href="#nextSteps" class="subTOC proxBold">
                     Next Steps
                 </a>
+
+
             </div>
         </div>
         <div class="reportDiv">
+            
             <div class="reportHeaderDiv">
                 <div class="Title-Subtitle">
                     <p class="reportH1 proxBold">ENGR 492 Course Project # 2</p>
                     <p class="reportSub1 adelleReg">Two-Dimensional Static Truss Analysis</p>
                 </div>
                 <p class="authors">
-                    <!-- <span>Omar Noury<br> #73735524</span> -->
-                    <!-- <span>Taymour Metwalli<br> #15770787</span> -->
+                    <span>Omar Noury<br> #73735524<br><br>
+                        Taymour Metwalli<br> #15770787</span>
                 </p>
             </div>
             <hr>
             <div class="reportBodyDiv">
+                <a href="https://onoury.github.io/ENGR492_Course_Project_2/" target="_blank" id="projectLinkBtn" class="projectLinkBtn" style="position: absolute; top: -20px; left: 2rem; height: 8rem; width: 4rem; scale: 0.6; ">
+                    <svg id="Report-svg-link" xmlns="http://www.w3.org/2000/svg" viewBox="10 -1 100 55" class="icon" style=" height: 3.5rem; width: 7rem; background-color: white; border: 2px solid gray; border-radius: 10px; transition: 1000ms ease-in-out all"> 
+                        <style type="text/css">.st0{fill-rule:evenodd;clip-rule:evenodd;}</style>
+                        <g>
+                            <path class="st0" d="M16.55,3.48c0.57-4.79,7.86-4.47,7.86,0v1.01c5.29,10.8,15.2,16.77,26.06,19c5.66,1.17,11.59,1.32,17.27,0.63 c5.67-0.69,11.08-2.23,15.7-4.46c7.2-3.47,12.5-8.59,13.91-14.73V3.48c0.57-4.79,7.86-4.47,7.86,0v2.4 c2.18,4.3,5.17,7.74,8.52,10.51c2.87,2.37,6.01,4.28,9.15,5.83v2.98c-1.16-0.55-2.33-1.13-3.48-1.77v9.1h3.48v4.59h-17.67v14.62 h-7.86V37.11H24.41v14.62h-7.86V37.11H0v-4.59h2.91v-9.4C1.95,23.67,0.97,24.18,0,24.67v-3.01c2.75-1.45,5.47-3.17,7.97-5.26 c3.39-2.84,6.39-6.36,8.58-10.79V3.48L16.55,3.48z M66.73,26.93v5.59h-2.69v-5.38c-2.04,0.11-4.09,0.11-6.15,0v5.38h-2.69v-5.6 c-1.77-0.18-3.53-0.45-5.27-0.81c-0.32-0.07-0.64-0.13-0.95-0.21v6.61h-2.69v-7.3c-2.11-0.6-4.16-1.35-6.15-2.25v9.55h-2.69V21.64 c-2.2-1.19-4.29-2.59-6.22-4.2v15.08h-2.69V14.96c-1.51-1.54-2.9-3.24-4.14-5.1v22.67h72.95V11.58c-1.08,1.66-2.41,3.21-3.96,4.65 v16.29H90.7V18.44c-1.84,1.35-3.89,2.57-6.09,3.63l-0.13,0.06v10.39h-2.69v-9.2c-1.96,0.79-4.02,1.47-6.15,2.03v7.18h-2.69v-6.54 c-1.6,0.34-3.24,0.61-4.89,0.81C67.62,26.84,67.18,26.89,66.73,26.93L66.73,26.93z M111.88,18.34v14.19h4.83V21.84 c-1.61-1.01-3.18-2.14-4.69-3.39L111.88,18.34L111.88,18.34z M109.19,32.53V15.87c-1.43-1.45-2.77-3.03-3.98-4.78v21.43H109.19 L109.19,32.53z M13.11,15.21v17.32h3.44V10.91C15.5,12.47,14.34,13.89,13.11,15.21L13.11,15.21z M10.42,32.53V17.82 c-0.24,0.21-0.49,0.43-0.74,0.63C8.37,19.55,7,20.56,5.6,21.48v11.05H10.42L10.42,32.53z"/>
+                        </g>
+                    </svg>
+                <text style="position: absolute; top: 45%; left: 30% ; text-wrap: nowrap; font-size: medium; text-decoration: underline; color: #202587;"><b>Open Project</b></text>
+                </a>
                 <section id="intro">
                     <p class="reportH2 proxBold">Introduction</p>
                     <section id="theStiffnessMethod">
@@ -978,6 +992,12 @@
                                 <li>
                                     Improve the GUI by adding an interactive way to add nodes and elements
                                 </li>
+                                <li>
+                                    Use what I learnt while working on  this project to make a real-time solver for dynamic problems using Lagrange's method and the RK-4 numerical solution
+                                </li>
+                                <li>
+                                    live laugh and love
+                                </li>
                             </ul>
                         </p>
                     </section>
@@ -986,7 +1006,7 @@
         </div>
     </div>
     <footer>
-        <p style="text-align: center;"> Thank you for listening<br><br>
+        <p style="text-align: center;"> Thank you for reading<br><br>
         Please note that I wrote all the code for the project myself from scratch <br><br>
         That is for both the truss analysis tool and the code for this report/webpage</p>
     </footer>
