--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     CONCLUSION
                 </a>
                 <a href="#summary" class="subTOC proxBold">
-                    Chat-GPT Summary
+                    Summary
                 </a>
                 <a href="#nextSteps" class="subTOC proxBold">
                     Next Steps
@@ -964,9 +964,9 @@
                 <section id="Conclusion">
                     <p class="reportH2 proxBold">Conclusion</p>
                     <section id="summary">
-                        <p class="reportH3 proxBold">Chat-GPT Summary</p>
+                        <p class="reportH3 proxBold">Summary</p>
                     <p class="reportP1">
-                        This project successfully demonstrated the implementation of the stiffness method for the structural analysis of truss systems using a web-based application. By integrating key engineering concepts such as the adjacency matrix, stiffness matrix, and boundary condition handling, the application efficiently calculated nodal displacements, internal forces, and stresses for a given truss configuration.
+                        This project demonstrated the implementation of the stiffness method for the structural analysis of truss systems using a web-based application. By integrating key engineering concepts such as the adjacency matrix, stiffness matrix, and boundary condition handling, the application efficiently calculated nodal displacements, internal forces, and stresses for a given truss configuration.
                     </p><br>
                     <p class="reportP1">
                         The application utilizes JavaScript classes and modular programming to handle data structures representing nodes, elements, and boundary conditions. Through LU decomposition, the system of equations was solved efficiently, and the results were systematically used to compute secondary parameters such as element displacements, strains, stresses, and internal forces. The visual output, combined with tabular results, provides a comprehensive understanding of the truss's structural behavior.
